# kowainik-haskell-mini-patterns

./: LICENSE  README.md  kowainik-haskell-mini-patterns.cabal
src/: NewtypeTask.hs
