name:                kowainik-haskell-mini-patterns
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/lifchicker/kowainik-haskell-mini-patterns#readme
license:             BSD3
license-file:        LICENSE
author:              Aleksei 'lifchicker' Antonov
maintainer:          lifchicker@gmail.com
copyright:           2020 Aleksei 'lifchicker' Antonov
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     NewtypeTask
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable kowainik-haskell-mini-patterns
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , kowainik-haskell-mini-patterns
  default-language:    Haskell2010

test-suite kowainik-haskell-mini-patterns-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , kowainik-haskell-mini-patterns
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lifchicker/kowainik-haskell-mini-patterns
